adding pokemons and styling

--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 
     <body>
         <img src="assets/logo.png" class="logo" alt="logo"/>
+        <div class="pokemon-container"></div>
+            <ul id="pokemon-list"></ul>
+        <button onclick="fetchPokemons()">Load More Pokemons</button>
         <script src="script.js"></script>
-        <div id="pokemonList" class="container">
-            <ul id = "pokemon-list"></ul>
-        </div>
-        <button onclick="fetchPokemons()">More Pokemons</button>
     </body>
 </html>
